--- a/test/all.html
+++ b/test/all.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>ReMarkdown Unit Tests</title>
-    <link rel="stylesheet" href="lib/qunit-1.14.0.css">
+    <link rel="stylesheet" href="bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<script src="lib/qunit-1.14.0.js"></script>
+<script src="bower_components/qunit/qunit/qunit.js"></script>
 <script>
     QUnit.config.autostart = false;
     QUnit.config.autoload = false;
     QUnit.config.testTimeout = 60000;
 </script>
-<script data-main="tests.js" src="lib/require.js"></script>
+<script data-main="tests.js" src="../bower_components/requirejs/require.js"></script>
 </body>
 </html>
