--- a/test/all.html
+++ b/test/all.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>ReMarkdown Unit Tests</title>
-    <link rel="stylesheet" href="bower_components/qunit/qunit/qunit.css">
+    <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<script src="bower_components/qunit/qunit/qunit.js"></script>
+<script src="../bower_components/qunit/qunit/qunit.js"></script>
 <script>
     QUnit.config.autostart = false;
     QUnit.config.autoload = false;
